--- a/styles/styles.css
+++ b/styles/styles.css
@@ -419,6 +419,10 @@ header h1 {
           align-items: center;
   text-align: center;
 }
+.about h2 {
+  position: relative;
+  z-index: 1;
+}
 
 .services {
   background-color: #fafafa;
@@ -544,8 +548,48 @@ header h1 {
   background-color: #effdf3;
   padding: 4em 0 4em;
 }
+.details .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+@media (max-width: 800px) {
+  .details .wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+}
+.details .wrapper .item {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1em;
+}
+.details .icon a {
+  width: 4rem;
+  background-color: #4ceea7;
+  border-radius: 50%;
+  padding: 0.5em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
 .details .banner-img {
-  height: 250px;
+  height: 50vh;
   background-image: url(../../assets/banner.jpg);
   background-repeat: no-repeat;
   background-size: cover;
